<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_information"
            android:title="@string/caption_information" />
        <item
            android:id="@+id/nav_alarms"
            android:title="@string/caption_alarms"  />
        <item
            android:id="@+id/nav_online"
            android:title="@string/caption_online"  />
        <item
            android:id="@+id/nav_dump"
            android:title="@string/caption_dump"  />
        <item
            android:id="@+id/nav_set_date"
            android:title="@string/caption_set_date"  />
        <item
            android:id="@+id/nav_live_mode"
            android:title="@string/caption_live_mode"  />
    </group>

</menu>