<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/settings_workactivity_1"
        android:checkable="true"
        android:title="@string/settings_workactivity_1"/>
    <item
        android:id="@+id/settings_workactivity_2"
        android:checkable="true"
        android:title="@string/settings_workactivity_2"/>
    <item
        android:id="@+id/settings_workactivity_3"
        android:checkable="true"
        android:title="@string/settings_workactivity_3"/>
    <item
        android:id="@+id/settings_workactivity_4"
        android:title="@string/settings_workactivity_4"/>
    <item
        android:id="@+id/settings_workactivity_5"
        android:title="@string/settings_workactivity_5" />

</menu>