<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Preferences">

    <CheckBoxPreference
        android:key="@string/settings_workactivity_1"
        android:id="@+id/settings_workactivity_1"
        android:checkable="true"
        android:title="@string/settings_workactivity_1"/>
        />
    <CheckBoxPreference
        android:key="@string/settings_workactivity_2"
        android:id="@+id/settings_workactivity_2"
        android:checkable="true"
        android:title="@string/settings_workactivity_2"/>

    <CheckBoxPreference
        android:key="@string/settings_workactivity_3"
        android:id="@+id/settings_workactivity_3"
        android:checkable="true"
        android:title="@string/settings_workactivity_3"/>

    <Preference
        android:key="@string/settings_workactivity_4"
        android:id="@+id/settings_workactivity_4"
        android:title="@string/settings_workactivity_4"/>




</PreferenceScreen>